# outo-agentcore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: README.md  agents.md  architecture.md  configuration.md  development.md  getting-started.md  providers.md  sessions.md  skills.md  tools.md  wiki.md
docs/examples/skills/code-review/: SKILL.md
docs/examples/skills/git-workflow/: SKILL.md
src/outo_agentcore/: __main__.py
src/outo_agentcore/cli/: __init__.py  cmd_chat.py  cmd_sessions.py  cmd_setup.py  main.py
src/outo_agentcore/config/: __init__.py  loader.py  schema.py
src/outo_agentcore/core/: __init__.py  agent.py  context.py  message.py  provider.py  router.py  runtime.py  skill.py  token_utils.py  tool.py  wiki_tools.py
src/outo_agentcore/parser/: __init__.py  agent_md.py  skill_md.py
src/outo_agentcore/providers/: __init__.py  openai.py
src/outo_agentcore/sessions/: __init__.py  manager.py
src/outo_agentcore/tools/: __init__.py
tests/: test_agent.py  test_agent_md.py  test_bash_tool.py  test_config.py  test_context.py  test_integration.py  test_message.py  test_openai_provider.py  test_provider.py  test_providers.py  test_router.py  test_runtime.py  test_sessions.py  test_skill.py  test_tool.py  test_wiki_tools.py
