[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outo-agentcore"
version = "0.1.0"
description = "CLI agent tool based on agentouto SDK patterns"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["openai>=1.50.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.8"]

[project.scripts]
outoac = "outo_agentcore.cli.main:main"
outo-agentcore = "outo_agentcore.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/outo_agentcore"]

[tool.hatch]
source-dir = "src"